[package]
name = "pact-graph-network"
version = "0.3.0"
authors = ["Guillaume CAMUS <guillaume.camus@gmail.com>"]
license = "MIT"
keywords = [
    "pact",
    "contract",
    "command-line",
    "test",
    "development",
    "utility",
]
edition = "2021"
categories = ["command-line-utilities", "development-tools"]
description = """
Generates a schema of dependencies between microservices using pact-broker data
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0.29", features = ["cargo", "derive"] }
env_logger = "0.10.0"
futures = "0.3.25"
handlebars = { version = "4.3.5", features = ["rust-embed"] }
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"], default-features = false }
rust-embed = "6.4.2"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
