[package]
name = "pact-broker-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.60"
futures = "0.3.25"
log = "0.4.17"
pact-broker-models = { version = "0.1.0", path = "../pact-broker-models" }
reqwest = { version = "0.11.13", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_path_to_error = "0.1.9"
snafu = { version = "0.7.4", features = ["backtraces"] }
thiserror = "1.0.38"
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
rstest = "0.16.0"
tokio = { version = "1.23.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.2"
wiremock = "0.5.16"
